# react-svg-call-graph

./: .gitignore  README.md  package.json
api/: .gitignore  Cargo.toml
api/migrations/: 20250801063513_create_table_contracts.sql
api/src/: etherscan.rs  main.rs
be/: Cargo.toml
be/migrations/: 20250801064116_create_table_function_selectors.sql
be/src/: main.rs
notes/: data.ts  names.json  req.ts  tx-res.json  tx.json  types.ts
src/: App.module.css  App.tsx  dev.ts  index.css
src/components/: CallGraph.tsx  CallGraphUi.module.css  CallGraphUi.tsx  Controller.tsx  GraphController.tsx  Svg.tsx  SvgUi.tsx
src/components/graph/: CallGraph.tsx  CallGraphUi.tsx  GraphController.tsx  Svg.tsx
src/components/graph/lib/: graph.ts  svg.ts  types.ts
src/components/tracer/: Inputs.module.css  Inputs.tsx  Outputs.module.css  Outputs.tsx  TracerContext.tsx  index.module.css  index.tsx  types.tsx
src/contexts/: WindowSize.tsx
src/lib/: graph.ts  math.ts  svg.ts  types.ts  utils.ts
ui/: index.html  package.json
ui/notes/: env.ts  lib.ts  memo.md  req.ts  tmp.ts
ui/notes/data/: abis.json
ui/src/: App.module.css  App.tsx  api.tsx  chain.ts  index.css  trace.ts  tracer.ts  tx.ts  utils.ts
ui/src/api/: index.ts  types.ts
ui/src/components/: CopyText.module.css  CopyText.tsx  Splits.module.css  Splits.tsx
ui/src/components/graph/: CallGraph.tsx  CallGraphUi.tsx  GraphController.module.css  Svg.tsx  (+2 more)
ui/src/contexts/: App.tsx
ui/src/hooks/: useAsync.tsx  useSplits.tsx
ui/src/pages/: HomePage.module.css  HomePage.tsx  TxPage.module.css  TxPage.tsx
(+24 files in other folders)
