[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres"] }
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
